--- a/Decouvrir/decouvri.html
+++ b/Decouvrir/decouvri.html
@@ -54,116 +54,111 @@
                     </div>
                 </div>
             </header>
-            <main>
-                <section class="collection">
-                    <a id="push-up" href="#back-top2"
-                        ><i class="fa-solid fa-chevron-up"></i
-                    ></a>
-                    <section class="aston-martin">
-                        <div class="car-content">
-                            <div class="grid-car">
-                                <div class="h2-container">
-                                    <h2>1964</h2>
-                                </div>
-                                <div class="img-container">
-                                    <img
-                                        src="./img/aston.png"
-                                        alt="Aston Martin DB5 de 1964"
-                                        id="aston"
-                                    />
-                                </div>
-                                <div class="car-txt">
-                                    <h4>ASTON MARTIN DB5</h4>
-                                    <p>
-                                        Voiture anglaise iconique, utilisée dans
-                                        les films de James Bond, une réelle
-                                        pépite pour les collectionneurs.
-                                    </p>
-                                    <h6>A rejoint la collection en 1999</h6>
-                                </div>
-                            </div>
+
+            <section class="aston-martin">
+                <!-- <a id="push-top" href="#back-top2"
+                    ><i class="fa-solid fa-chevron-up"></i
+                ></a> -->
+                <div class="car-content">
+                    <div class="grid-car">
+                        <div class="h2-container">
+                            <h2>1964</h2>
                         </div>
-                    </section>
-                    <section class="mustang">
-                        <div class="car-content">
-                            <div class="grid-car">
-                                <div class="h2-container">
-                                    <h2>1967</h2>
-                                </div>
-                                <div class="img-container">
-                                    <img
-                                        src="./img/mustang.png"
-                                        alt="Ford Mustang v8 de 1967"
-                                        id="mustang"
-                                    />
-                                </div>
-                                <div class="car-txt">
-                                    <h4>Ford MUSTANG v8</h4>
-                                    <p>
-                                        Légendaire. Intemporelle. Ce sont les
-                                        quelques mots utilisés pour décrire la
-                                        puissance et le style de la Ford
-                                        Mustang.
-                                    </p>
-                                    <h6>A rejoint la collection en 1978</h6>
-                                </div>
-                            </div>
+                        <div class="img-container">
+                            <img
+                                src="./img/aston.png"
+                                alt="Aston Martin DB5 de 1964"
+                                id="aston"
+                            />
                         </div>
-                    </section>
-                    <section class="bmw">
-                        <div class="car-content">
-                            <div class="grid-car">
-                                <div class="h2-container">
-                                    <h2>1995</h2>
-                                </div>
-                                <div class="img-container">
-                                    <img
-                                        src="./img/bmw e5.png"
-                                        alt="Bmw e30 de 1995"
-                                        id="aston"
-                                    />
-                                </div>
-                                <div class="car-txt">
-                                    <h4>bmw e30</h4>
-                                    <p>
-                                        Voiture emblémartique de la série E chez
-                                        BMW, la E30 a marqué toute une
-                                        génération par sa fiabilité et sa
-                                        puissance.
-                                    </p>
-                                    <h6>A rejoint la collection en 2002</h6>
-                                </div>
-                            </div>
+                        <div class="car-txt">
+                            <h4>ASTON MARTIN DB5</h4>
+                            <p>
+                                Voiture anglaise iconique, utilisée dans les
+                                films de James Bond, une réelle pépite pour les
+                                collectionneurs.
+                            </p>
+                            <h6>A rejoint la collection en 1999</h6>
                         </div>
-                    </section>
-                    <section class="bugatti">
-                        <div class="car-content">
-                            <div class="grid-car">
-                                <div class="h2-container">
-                                    <h2>2011</h2>
-                                </div>
-                                <div class="img-container">
-                                    <img
-                                        src="./img/bugatti.png"
-                                        alt="bugatti veyron de 2011"
-                                        id="aston"
-                                    />
-                                </div>
-                                <div class="car-txt">
-                                    <h4>BUGATTI Veyron</h4>
-                                    <p>
-                                        431km/h c’est la vitesse de pointe
-                                        atteinte par cette hypercar lors d’un
-                                        tour sur le circuit Nuremberg le 15 juin
-                                        2010.
-                                    </p>
-                                    <h6>A rejoint la collection en 2014</h6>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+            </section>
+            <section class="mustang">
+                <div class="car-content">
+                    <div class="grid-car">
+                        <div class="h2-container">
+                            <h2>1967</h2>
                         </div>
-                    </section>
-                </section>
-            </main>
+                        <div class="img-container">
+                            <img
+                                src="./img/mustang.png"
+                                alt="Ford Mustang v8 de 1967"
+                                id="mustang"
+                            />
+                        </div>
+                        <div class="car-txt">
+                            <h4>Ford MUSTANG v8</h4>
+                            <p>
+                                Légendaire. Intemporelle. Ce sont les quelques
+                                mots utilisés pour décrire la puissance et le
+                                style de la Ford Mustang.
+                            </p>
+                            <h6>A rejoint la collection en 1978</h6>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="bmw">
+                <div class="car-content">
+                    <div class="grid-car">
+                        <div class="h2-container">
+                            <h2>1995</h2>
+                        </div>
+                        <div class="img-container">
+                            <img
+                                src="./img/bmw e5.png"
+                                alt="Bmw e30 de 1995"
+                                id="aston"
+                            />
+                        </div>
+                        <div class="car-txt">
+                            <h4>bmw e30</h4>
+                            <p>
+                                Voiture emblémartique de la série E chez BMW, la
+                                E30 a marqué toute une génération par sa
+                                fiabilité et sa puissance.
+                            </p>
+                            <h6>A rejoint la collection en 2002</h6>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="bugatti">
+                <div class="car-content">
+                    <div class="grid-car">
+                        <div class="h2-container">
+                            <h2>2011</h2>
+                        </div>
+                        <div class="img-container">
+                            <img
+                                src="./img/bugatti.png"
+                                alt="bugatti veyron de 2011"
+                                id="aston"
+                            />
+                        </div>
+                        <div class="car-txt">
+                            <h4>BUGATTI Veyron</h4>
+                            <p>
+                                431km/h c’est la vitesse de pointe atteinte par
+                                cette hypercar lors d’un tour sur le circuit
+                                Nuremberg le 15 juin 2010.
+                            </p>
+                            <h6>A rejoint la collection en 2014</h6>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <footer>
                 <div class="footer-content">
                     <div class="footer-left">
